# MFCOVS

./: QtYLProduct.cpp  QtYLProduct.h  README.md  ReadCamera.cpp  ReadCamera.h
MFCDevice/: MFCDevice.sln  README.md
MFCDevice/MFCDevice/: MFCDevice.aps  MFCDevice.cpp  MFCDevice.h  MFCDevice.rc  MFCDevice.vcxproj  MFCDevice.vcxproj.filters  MFCDeviceDlg.cpp  MFCDeviceDlg.h  bright.py  resource.h  test.json
MFCDevice/MFCDevice/DeviceCommon/: DeviceControl.cpp  DeviceControl.h
MFCDevice/MFCDevice/lib/: SonixCamera.lib  sqlite3.lib  sqlite3d.lib
MFCDevice/MFCDevice/res/: MFCDevice.rc2
OVM-200/: README.md
OVM-200/demo/OVSSDKDemo/: OVSSDKDemo.sln
OVM-200/sdk/OVSSDK/: OVSSDK.sln
OVSApplication/: OVSApplication.sln
OVSApplication/OVSApplication/: ImageControl.cpp  ImageControl.h  OVSApplication.aps  OVSApplication.cpp  OVSApplication.h  OVSApplication.rc  OVSApplication.vcxproj  OVSApplication.vcxproj.filters  OVSApplicationDlg.cpp  OVSApplicationDlg.h  OVSDevice.cpp  OVSDevice.h  OVSPalmParser.cpp  OVSPalmParser.h  OVSSqliteControl.cpp  OVSSqliteControl.h  resource.h  test.txt  userdb.db
OVSApplication/OVSApplication/image/: svm.yaml
OVSApplication/OVSApplication/res/: OVSApplication.rc2
OVSMFCUser/: OVSMFCUser.sln
OVSMFCUser/OVSMFCUser/: OVSMFCUser.aps  OVSMFCUser.cpp  OVSMFCUser.h  OVSMFCUser.rc  OVSMFCUser.vcxproj  OVSMFCUser.vcxproj.filters  OVSMFCUserDlg.cpp  OVSMFCUserDlg.h  resource.h
OVSMFCUser/OVSMFCUser/lib/: SonixCamera.lib  sqlite3.lib
OVSMFCUser/OVSMFCUser/logs/: basic.txt
OVSMFCUser/OVSMFCUser/res/: OVSMFCUser.rc2
ovm-200-sdk-linux/: .gitignore  README.md  push.sh
ovm-200-sdk-linux/feature-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ovm_200_feature.def  ovm_200_feature.sln  ovm_200_feature.vcxproj  ovm_200_feature.vcxproj.filters
ovm-200-sdk-linux/lib/: libopencv_core.so.3.2  libopencv_highgui.so.3.2  libopencv_imgcodecs.so.3.2  libopencv_imgproc.so.3.2  libopencv_ml.so.3.2  libopencv_objdetect.so.3.2  libopencv_video.so.3.2  libopencv_videoio.so.3.2  libovm_200_feature.so.0.1.0.0  libovm_200_match.so.0.1.0.0  log.conf  ovm_200_feature.h  ovm_200_match.h
ovm-200-sdk-linux/lib-dev/: finger_svm.yaml  libopencv_calib3d.so.3.4  libopencv_features2d.so.3.4  libopencv_flann.so.3.4  libopencv_highgui.so.3.4  libopencv_imgcodecs.so.3.4  libopencv_ml.so.3.4  libopencv_objdetect.so.3.4  libopencv_photo.so.3.4  libopencv_shape.so.3.4  libopencv_stitching.so.3.4  libopencv_superres.so.3.4  libopencv_video.so.3.4  libopencv_videoio.so.3.4  libopencv_videostab.so.3.4  libovm_200_feature.so.0.1.0.0  libovm_200_match.so.0.1.0.0  ovm_200_feature.h  ovm_200_match.h  palm_det.yaml  run.sh
ovm-200-sdk-linux/lib-dev-win/include/: ovm_200_feature.h  ovm_200_feature_dev.h  ovm_200_match.h  ovm_200_match_dev.h
ovm-200-sdk-linux/lib-win/include/: ovm_200_feature.h
ovm-200-sdk-linux/match-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ovm_200_match.sln  ovm_200_match.vcxproj  ovm_200_match.vcxproj.filters
ovm-200-sdk-linux/sdk-test-tool/: imagewidget.cpp  imagewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sdk-test-tool.pro  sqlhandler.cpp  sqlhandler.h
ovm-200-sdk-linux/simple-demo/: CMakeLists.txt  main.cpp
ovm-200-sdk-linux/src/: ovm_200_defines.h
ovm-200-sdk-linux/src/feature-src/: CMakeLists.txt  algorithmhandler.cpp  algorithmhandler.h  devhandler.cpp  devhandler.h  global.cpp  global.h  ovm_200_feature.cpp  ovm_200_feature_dev.cpp  ovm_200_feature_dev.h  threadhandler.cpp  threadhandler.h
ovm-200-sdk-linux/src/feature-src/device-linux/: sonixhandler.cpp  sonixhandler.h
ovm-200-sdk-linux/src/feature-src/device-windows/: OVSDevice.cpp  OVSDevice.h
ovm-200-sdk-linux/src/logger/: easylogging++.h  logger.cpp  logger.h
ovm-200-sdk-linux/src/match-src/: CMakeLists.txt  CMakeLists.txt.user.22  algomatch.cpp  algomatch.h  cachehandler.cpp  cachehandler.h  global.cpp  global.h  ovm_200_match.cpp  ovm_200_match.h  ovm_200_match_dev.cpp
ovm-200-sdk-linux/vs-project/: ovs sdk for windows.sln
ovm-200-sdk-linux/vs-project/demo_c++/: ovs test demo.cpp  ovs test demo.h  ovs test demo.vcxproj  ovs test demo.vcxproj.filters  ovs test demoDlg.cpp  ovs test demoDlg.h  ovstestdemo.aps  ovstestdemo.rc  resource.h
ovm-200-sdk-linux/vs-project/feature/: ovm_200_feature.vcxproj  ovm_200_feature.vcxproj.filters
ovm-200-sdk-linux/vs-project/match/: ovm_200_match.def  ovm_200_match.vcxproj  ovm_200_match.vcxproj.filters
ovm-200-sdk-linux/vs_project_dev/: ovs sdk for windows.sln
ovm-200-sdk-linux/vs_project_dev/feature/: ovm_200_feature.vcxproj  ovm_200_feature.vcxproj.filters
ovm-200-sdk-linux/vs_project_dev/match/: ovm_200_match.def  ovm_200_match.vcxproj  ovm_200_match.vcxproj.filters
ovm_algo_dev_tool-dev_NewAlgo/: ControlForm.ui  DBMatchForm.ui  DevHandler.cpp  DevHandler.h  Global.cpp  Global.h  TestForm.cpp  TestForm.h  TestForm.ui  algorithmhandler.cpp  algorithmhandler.h  imageWidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ovm-algorithm-dev-tool.pro  sqlhandler.cpp  sqlhandler.h
ovm_algo_dev_tool-dev_NewAlgo/MatchDB/: DBMatchForm.cpp  DBMatchForm.h
ovm_algo_dev_tool-dev_NewAlgo/MatchRealTime/: ControlForm.cpp  ControlForm.h  ThreadHandler.cpp  ThreadHandler.h  imageWidget.cpp  imageWidget.h
ovm_algo_dev_tool-dev_NewAlgo/algorithm/: example.cpp
ovm_algo_dev_tool-dev_NewAlgo/device-linux/: sonixhandler.cpp  sonixhandler.h
ovm_algo_dev_tool-dev_NewAlgo/logger/: Log.cpp  Log.h
ovs_palm_vein/: .gitignore  CMakeLists.txt
ovs_palm_vein/include/: palm_vein.hpp  palmveinparser_impl.hpp  utils.hpp
ovs_palm_vein/scripts/: palmvein.py  utils.py
ovs_palm_vein/src/: palm_vein.cpp  palmveinparser_impl.cpp
ovs_palm_vein/test/: compare.cpp  test.cpp  train.cpp
ovs_sdk2.0win/: ovs-sdk-2.0.sdf  ovs-sdk-2.0.sln
ovs_sdk2.0win/include/: ovs_api.h  ovs_data.h  ovs_error.h
wzxpython/: enhance.py  get_data_palm.py  hog_feature_palm.py  match.py  palm_readme.docx  test_palm.py  test_v2.py
(+283 files in other folders)
